--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 a {
 	text-decoration: none;
-	color: yellow;
+	color: grey;
 }
 
 h1, h2, h3 {
@@ -20,7 +20,7 @@ h1, h2, h3 {
 }
 	
 #header {
-	background-color: #F08080;
+	background-color: #CD5C5C;
 	color: white;
 	text-align: center; 
 	padding: 10px;
