--- a/style.css
+++ b/style.css
@@ -52,6 +52,6 @@ h1, h2, h3 {
 #footer {
 	clear: both;
 	padding: 10px;
-	background-color: #999999;
+	background-color: #CD5C5C;
 	color: white;
 	text-align: right;
