--- a/style.css
+++ b/style.css
@@ -31,13 +31,15 @@ h1, h2, h3 {
 }
 
 #nav {
-	width: 150px;
+	width: 200px;
 	float: left;
 }	
 
 #nav ul{
 	list-style-type: none;
-	padding: 0;
+	text-align:center;
+	font-size: 30px;
+	padding: 30px;
 }	
 
 #nav.selected {
